--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,6 +1,88 @@
 :root {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  dl,
+  dt,
+  dd,
+  ul,
+  ol,
+  li,
+  pre,
+  form,
+  button,
+  input,
+  textarea,
+  th,
+  td,
+  p {
+    margin: 0;
+    padding: 0;
+  }
 
   body {
-    margin: 0;
+    position: relative;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    width: 100%;
+    height: 100%;
+    font-family: "Microsoft Yahei", "微软雅黑", 宋体;
+    color: #ccc;
+    font-size: 14px;
+    line-height: 1.2;
+  }
+
+  ul,
+  ol {
+    list-style: none;
+  }
+
+  a,
+  a:hover,
+  a:active,
+  a:focus {
+    text-decoration: none;
+    outline-style: none;
+  }
+
+  /*清除链接虚框 for IE*/
+  :focus {
+    -moz-outline-style: none;
+  }
+
+  img {
+    border: 0;
+    vertical-align: middle
+  }
+
+  p {
+    word-wrap: break-word;
+  }
+
+  .clearfix {
+    zoom: 1;
+  }
+
+  /* clearfix for IE */
+  .clearfix:after {
+    content: "";
+    display: block;
+    clear: both;
+    visibility: hidden;
   }
 }
