--- a/src/views/home/components/Content/index.scss
+++ b/src/views/home/components/Content/index.scss
@@ -23,6 +23,25 @@
       font-size: 16px;
       line-height: 16px;
       color: #fff;
+
+      &::-webkit-input-placeholder {
+        color: #ccc;
+      }
+
+      &::-moz-placeholder {
+        /* Firefox 19+ */
+        color: #ccc;
+      }
+
+      &:-moz-placeholder {
+        /* Firefox 4 to 18 */
+        color: #ccc;
+      }
+
+      &:-ms-input-placeholder {
+        /* IE 10-11 */
+        color: #ccc;
+      }
     }
 
     .clear {
@@ -57,6 +76,15 @@
         line-height: 30px;
         padding: 0 15px;
         cursor: pointer;
+        transition: all .5s;
+
+        &.baidu:hover {
+          background: rgb(78 110 242 / .8)
+        }
+
+        &.google:hover {
+          background: rgb(244 67 54 / .8)
+        }
       }
     }
   }
