--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
 #root {
   height: 100%;
+  background-color: #000;
+  background-image: url(@/assets/images/bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  font-weight: lighter;
 }
