--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -2,6 +2,5 @@
   min-width: 768px;
   height: 100%;
   overflow: auto;
-  background: #222;
-  font-weight: lighter;
+  background-color: rgb(0 0 0 / .2);
 }
