--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -2,5 +2,10 @@
   min-width: 768px;
   height: 100%;
   overflow: auto;
+  transition: background-color .3s;
   background-color: rgb(0 0 0 / .2);
+
+  &.focus {
+    background-color: rgb(0 0 0 / .6);
+  }
 }
